# finanbot

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  alembic.ini  cleand_dbfolder.ps1  cleand_dbfolder.sh  docker-compose.yml  helper.py  ini .editorconfig  pyproject.toml  requirements.txt
maintenance/: rename_db_columns.py
src/: main.py
src/api/v1/: attachments.py  crud.py  dependency_providers.py  router.py  schemas.py  services.py  transactions.py  users.py
src/attachments/: storage.py
src/core/: config.py  logger.py  security.py
src/db/: 01_init_finances.sh  02_init_finances.sql  base.py  crud.py  session.py
src/db/migrations/: env.py
src/finanbot/: Dockerfile  __about__.py  main.py
src/finanbot/api/v1/: attachments.py  transactions.py
src/finanbot/attachments/: storage.py
src/finanbot/core/: config.py  database_config.py  filesystem_config.py  logging.py  security.py
src/finanbot/db/: 00_create_extensions.sql  00_init_finances.sh  01_create_extensions.sql  01_init_finances.sh  02_init_finances.sql  03_seed_finances.sql  base.py  crud.py  init_finances.sql  session.py
src/finanbot/db/migrations/: bootstrap_finances.sql  env.py  schema.sql  seeds.sql
src/finanbot/db/migrations/versions/: 0001_rename_columns.py  0001_rename_columns.sql
src/finanbot/models/: orm_models.py  schemas.py
src/finanbot/repositories/: transaction_repo.py
src/finanbot/services/: backup_service.py
src/finanbot/utils/: postgres.py
src/infra/backup/: list_backup.ps1  list_backup.sh  restore_backup.sh  run_backup.sh  verify_backup.ps1  verify_backup.sh
src/infra/cron_deactivated_optional/: finanbot-crontab  hourly_job.py  on_startup_job.py
src/infra/deploy/: .dockerignore  Dockerfile.backend  Dockerfile.cron  Dockerfile.frontend  Dockerfile.ui
src/infra/monitoring/: README.md  healthcheck.py  run_healthcheck.ps1
src/infra/rclone_disabled/: rclone.template.conf
src/infra/scripts/: ensure_env_and_start.ps1  ensure_env_and_start.py
src/repositories/: transaction_repo.py
src/services/: backup_service.py  send_email.py
src/utils/: postgres.py
tests/: __init__.py
tests/api/: test_users.py
tools/: find_blank_files.py  rename_db_columns.py
ui/: Dockerfile  streamlit_app.py
ui/.streamlit/: config.toml
ui/pages/: attachments.py  dashboard.py  transactions.py
